// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders correctly 1`] = `
<DocumentFragment>
  .cache-122v91t-StyledCheckBoxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='true'] .eu28k4m3 .eu28k4m6 {
  stroke: #c4c9d6;
  fill: #f6f6f8;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-18vdqte-StyledReakitCheckbox {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
}

.cache-18vdqte-StyledReakitCheckbox+.eu28k4m3 .eu28k4m5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-18vdqte-StyledReakitCheckbox[aria-checked='true']+svg .eu28k4m5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-18vdqte-StyledReakitCheckbox[aria-checked='true']+.eu28k4m3,
.cache-18vdqte-StyledReakitCheckbox[aria-checked='mixed']+.eu28k4m3 {
  fill: #4f0599;
}

.cache-18vdqte-StyledReakitCheckbox[aria-checked='true']+.eu28k4m3 .eu28k4m6,
.cache-18vdqte-StyledReakitCheckbox[aria-checked='mixed']+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']+.eu28k4m3,
.cache-18vdqte-StyledReakitCheckbox[aria-invalid='mixed']+.eu28k4m3 {
  fill: #dd3252;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']+.eu28k4m3 .eu28k4m6,
.cache-18vdqte-StyledReakitCheckbox[aria-invalid='mixed']+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
}

.cache-18vdqte-StyledReakitCheckbox:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-18vdqte-StyledReakitCheckbox:focus+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']:focus+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-1m7zzqc-StyledIcon {
  margin-right: 8px;
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-uzcbt1-InnerCheckbox {
  fill: #ffffff;
  stroke: #b2b6c3;
}

<label
    aria-disabled="false"
    class="cache-122v91t-StyledCheckBoxContainer eu28k4m1"
    data-checked="false"
  >
    <input
      aria-checked="false"
      aria-invalid="false"
      class="cache-18vdqte-StyledReakitCheckbox eu28k4m2"
      name="testing"
      type="checkbox"
    />
    <svg
      class="cache-1m7zzqc-StyledIcon eu28k4m3"
      name="checkbox-blank-outline"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <rect
          class="cache-uzcbt1-InnerCheckbox eu28k4m6"
          height="14"
          rx="1"
          stroke-width="2"
          width="14"
          x="5"
          y="5"
        />
        <rect
          class="cache-1nu9t2r-CheckMark eu28k4m5"
          height="8"
          rx="1"
          width="8"
          x="8"
          y="8"
        />
      </g>
    </svg>
    Checkbox Label
  </label>
</DocumentFragment>
`;

exports[`Checkbox renders correctly checked 1`] = `
<DocumentFragment>
  .cache-122v91t-StyledCheckBoxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='true'] .eu28k4m3 .eu28k4m6 {
  stroke: #c4c9d6;
  fill: #f6f6f8;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-18vdqte-StyledReakitCheckbox {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
}

.cache-18vdqte-StyledReakitCheckbox+.eu28k4m3 .eu28k4m5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-18vdqte-StyledReakitCheckbox[aria-checked='true']+svg .eu28k4m5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-18vdqte-StyledReakitCheckbox[aria-checked='true']+.eu28k4m3,
.cache-18vdqte-StyledReakitCheckbox[aria-checked='mixed']+.eu28k4m3 {
  fill: #4f0599;
}

.cache-18vdqte-StyledReakitCheckbox[aria-checked='true']+.eu28k4m3 .eu28k4m6,
.cache-18vdqte-StyledReakitCheckbox[aria-checked='mixed']+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']+.eu28k4m3,
.cache-18vdqte-StyledReakitCheckbox[aria-invalid='mixed']+.eu28k4m3 {
  fill: #dd3252;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']+.eu28k4m3 .eu28k4m6,
.cache-18vdqte-StyledReakitCheckbox[aria-invalid='mixed']+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
}

.cache-18vdqte-StyledReakitCheckbox:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-18vdqte-StyledReakitCheckbox:focus+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']:focus+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-1m7zzqc-StyledIcon {
  margin-right: 8px;
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-uzcbt1-InnerCheckbox {
  fill: #ffffff;
  stroke: #b2b6c3;
}

<label
    aria-disabled="false"
    class="cache-122v91t-StyledCheckBoxContainer eu28k4m1"
    data-checked="true"
  >
    <input
      aria-checked="true"
      aria-invalid="false"
      checked=""
      class="cache-18vdqte-StyledReakitCheckbox eu28k4m2"
      name="checkbox-6c756c756c756c756c756c756c756c75"
      type="checkbox"
    />
    <svg
      class="cache-1m7zzqc-StyledIcon eu28k4m3"
      name="checkbox-marked-outline"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <rect
          class="cache-uzcbt1-InnerCheckbox eu28k4m6"
          height="14"
          rx="1"
          stroke-width="2"
          width="14"
          x="5"
          y="5"
        />
        <rect
          class="cache-1nu9t2r-CheckMark eu28k4m5"
          height="8"
          rx="1"
          width="8"
          x="8"
          y="8"
        />
      </g>
    </svg>
    Checkbox Label
  </label>
</DocumentFragment>
`;

exports[`Checkbox renders correctly checked and disabled 1`] = `
<DocumentFragment>
  .cache-122v91t-StyledCheckBoxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='true'] .eu28k4m3 .eu28k4m6 {
  stroke: #c4c9d6;
  fill: #f6f6f8;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-18vdqte-StyledReakitCheckbox {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
}

.cache-18vdqte-StyledReakitCheckbox+.eu28k4m3 .eu28k4m5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-18vdqte-StyledReakitCheckbox[aria-checked='true']+svg .eu28k4m5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-18vdqte-StyledReakitCheckbox[aria-checked='true']+.eu28k4m3,
.cache-18vdqte-StyledReakitCheckbox[aria-checked='mixed']+.eu28k4m3 {
  fill: #4f0599;
}

.cache-18vdqte-StyledReakitCheckbox[aria-checked='true']+.eu28k4m3 .eu28k4m6,
.cache-18vdqte-StyledReakitCheckbox[aria-checked='mixed']+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']+.eu28k4m3,
.cache-18vdqte-StyledReakitCheckbox[aria-invalid='mixed']+.eu28k4m3 {
  fill: #dd3252;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']+.eu28k4m3 .eu28k4m6,
.cache-18vdqte-StyledReakitCheckbox[aria-invalid='mixed']+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
}

.cache-18vdqte-StyledReakitCheckbox:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-18vdqte-StyledReakitCheckbox:focus+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']:focus+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-1m7zzqc-StyledIcon {
  margin-right: 8px;
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-uzcbt1-InnerCheckbox {
  fill: #ffffff;
  stroke: #b2b6c3;
}

<label
    aria-disabled="true"
    class="cache-122v91t-StyledCheckBoxContainer eu28k4m1"
    data-checked="true"
  >
    <input
      aria-checked="true"
      aria-disabled="true"
      aria-invalid="false"
      checked=""
      class="cache-18vdqte-StyledReakitCheckbox eu28k4m2"
      disabled=""
      name="checkbox-6c756c756c756c756c756c756c756c75"
      style="pointer-events: none;"
      type="checkbox"
    />
    <svg
      class="cache-1m7zzqc-StyledIcon eu28k4m3"
      name="checkbox-marked-outline"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <rect
          class="cache-uzcbt1-InnerCheckbox eu28k4m6"
          height="14"
          rx="1"
          stroke-width="2"
          width="14"
          x="5"
          y="5"
        />
        <rect
          class="cache-1nu9t2r-CheckMark eu28k4m5"
          height="8"
          rx="1"
          width="8"
          x="8"
          y="8"
        />
      </g>
    </svg>
    Checkbox Label
  </label>
</DocumentFragment>
`;

exports[`Checkbox renders correctly disabled 1`] = `
<DocumentFragment>
  .cache-122v91t-StyledCheckBoxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='true'] .eu28k4m3 .eu28k4m6 {
  stroke: #c4c9d6;
  fill: #f6f6f8;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-18vdqte-StyledReakitCheckbox {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
}

.cache-18vdqte-StyledReakitCheckbox+.eu28k4m3 .eu28k4m5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-18vdqte-StyledReakitCheckbox[aria-checked='true']+svg .eu28k4m5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-18vdqte-StyledReakitCheckbox[aria-checked='true']+.eu28k4m3,
.cache-18vdqte-StyledReakitCheckbox[aria-checked='mixed']+.eu28k4m3 {
  fill: #4f0599;
}

.cache-18vdqte-StyledReakitCheckbox[aria-checked='true']+.eu28k4m3 .eu28k4m6,
.cache-18vdqte-StyledReakitCheckbox[aria-checked='mixed']+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']+.eu28k4m3,
.cache-18vdqte-StyledReakitCheckbox[aria-invalid='mixed']+.eu28k4m3 {
  fill: #dd3252;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']+.eu28k4m3 .eu28k4m6,
.cache-18vdqte-StyledReakitCheckbox[aria-invalid='mixed']+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
}

.cache-18vdqte-StyledReakitCheckbox:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-18vdqte-StyledReakitCheckbox:focus+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']:focus+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-1m7zzqc-StyledIcon {
  margin-right: 8px;
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-uzcbt1-InnerCheckbox {
  fill: #ffffff;
  stroke: #b2b6c3;
}

<label
    aria-disabled="true"
    class="cache-122v91t-StyledCheckBoxContainer eu28k4m1"
    data-checked="false"
  >
    <input
      aria-checked="false"
      aria-disabled="true"
      aria-invalid="false"
      class="cache-18vdqte-StyledReakitCheckbox eu28k4m2"
      disabled=""
      name="checkbox-6c756c756c756c756c756c756c756c75"
      style="pointer-events: none;"
      type="checkbox"
    />
    <svg
      class="cache-1m7zzqc-StyledIcon eu28k4m3"
      name="checkbox-blank-outline"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <rect
          class="cache-uzcbt1-InnerCheckbox eu28k4m6"
          height="14"
          rx="1"
          stroke-width="2"
          width="14"
          x="5"
          y="5"
        />
        <rect
          class="cache-1nu9t2r-CheckMark eu28k4m5"
          height="8"
          rx="1"
          width="8"
          x="8"
          y="8"
        />
      </g>
    </svg>
    Checkbox Label
  </label>
</DocumentFragment>
`;

exports[`Checkbox renders correctly indeterminate 1`] = `
<DocumentFragment>
  .cache-122v91t-StyledCheckBoxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='true'] .eu28k4m3 .eu28k4m6 {
  stroke: #c4c9d6;
  fill: #f6f6f8;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-18vdqte-StyledReakitCheckbox {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
}

.cache-18vdqte-StyledReakitCheckbox+.eu28k4m3 .eu28k4m5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-18vdqte-StyledReakitCheckbox[aria-checked='true']+svg .eu28k4m5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-18vdqte-StyledReakitCheckbox[aria-checked='true']+.eu28k4m3,
.cache-18vdqte-StyledReakitCheckbox[aria-checked='mixed']+.eu28k4m3 {
  fill: #4f0599;
}

.cache-18vdqte-StyledReakitCheckbox[aria-checked='true']+.eu28k4m3 .eu28k4m6,
.cache-18vdqte-StyledReakitCheckbox[aria-checked='mixed']+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']+.eu28k4m3,
.cache-18vdqte-StyledReakitCheckbox[aria-invalid='mixed']+.eu28k4m3 {
  fill: #dd3252;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']+.eu28k4m3 .eu28k4m6,
.cache-18vdqte-StyledReakitCheckbox[aria-invalid='mixed']+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
}

.cache-18vdqte-StyledReakitCheckbox:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-18vdqte-StyledReakitCheckbox:focus+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']:focus+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-1m7zzqc-StyledIcon {
  margin-right: 8px;
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-uzcbt1-InnerCheckbox {
  fill: #ffffff;
  stroke: #b2b6c3;
}

<label
    aria-disabled="false"
    class="cache-122v91t-StyledCheckBoxContainer eu28k4m1"
    data-checked="indeterminate"
  >
    <input
      aria-checked="mixed"
      aria-invalid="false"
      class="cache-18vdqte-StyledReakitCheckbox eu28k4m2"
      name="checkbox-6c756c756c756c756c756c756c756c75"
      type="checkbox"
    />
    <svg
      class="cache-1m7zzqc-StyledIcon eu28k4m3"
      name="minus-box-outline"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <rect
          class="cache-uzcbt1-InnerCheckbox eu28k4m6"
          height="14"
          rx="1"
          stroke-width="2"
          width="14"
          x="5"
          y="5"
        />
        <rect
          height="2"
          rx="1"
          width="8"
          x="8"
          y="11"
        />
      </g>
    </svg>
    Checkbox Label
  </label>
</DocumentFragment>
`;

exports[`Checkbox renders correctly indeterminate and disabled 1`] = `
<DocumentFragment>
  .cache-122v91t-StyledCheckBoxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='true'] .eu28k4m3 .eu28k4m6 {
  stroke: #c4c9d6;
  fill: #f6f6f8;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-18vdqte-StyledReakitCheckbox {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
}

.cache-18vdqte-StyledReakitCheckbox+.eu28k4m3 .eu28k4m5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-18vdqte-StyledReakitCheckbox[aria-checked='true']+svg .eu28k4m5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-18vdqte-StyledReakitCheckbox[aria-checked='true']+.eu28k4m3,
.cache-18vdqte-StyledReakitCheckbox[aria-checked='mixed']+.eu28k4m3 {
  fill: #4f0599;
}

.cache-18vdqte-StyledReakitCheckbox[aria-checked='true']+.eu28k4m3 .eu28k4m6,
.cache-18vdqte-StyledReakitCheckbox[aria-checked='mixed']+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']+.eu28k4m3,
.cache-18vdqte-StyledReakitCheckbox[aria-invalid='mixed']+.eu28k4m3 {
  fill: #dd3252;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']+.eu28k4m3 .eu28k4m6,
.cache-18vdqte-StyledReakitCheckbox[aria-invalid='mixed']+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
}

.cache-18vdqte-StyledReakitCheckbox:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-18vdqte-StyledReakitCheckbox:focus+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']:focus+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-1m7zzqc-StyledIcon {
  margin-right: 8px;
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-uzcbt1-InnerCheckbox {
  fill: #ffffff;
  stroke: #b2b6c3;
}

<label
    aria-disabled="true"
    class="cache-122v91t-StyledCheckBoxContainer eu28k4m1"
    data-checked="indeterminate"
  >
    <input
      aria-checked="mixed"
      aria-disabled="true"
      aria-invalid="false"
      class="cache-18vdqte-StyledReakitCheckbox eu28k4m2"
      disabled=""
      name="checkbox-6c756c756c756c756c756c756c756c75"
      style="pointer-events: none;"
      type="checkbox"
    />
    <svg
      class="cache-1m7zzqc-StyledIcon eu28k4m3"
      name="minus-box-outline"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <rect
          class="cache-uzcbt1-InnerCheckbox eu28k4m6"
          height="14"
          rx="1"
          stroke-width="2"
          width="14"
          x="5"
          y="5"
        />
        <rect
          height="2"
          rx="1"
          width="8"
          x="8"
          y="11"
        />
      </g>
    </svg>
    Checkbox Label
  </label>
</DocumentFragment>
`;

exports[`Checkbox renders correctly invisible 1`] = `
<DocumentFragment>
  .cache-122v91t-StyledCheckBoxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='true'] .eu28k4m3 .eu28k4m6 {
  stroke: #c4c9d6;
  fill: #f6f6f8;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-18vdqte-StyledReakitCheckbox {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
}

.cache-18vdqte-StyledReakitCheckbox+.eu28k4m3 .eu28k4m5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-18vdqte-StyledReakitCheckbox[aria-checked='true']+svg .eu28k4m5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-18vdqte-StyledReakitCheckbox[aria-checked='true']+.eu28k4m3,
.cache-18vdqte-StyledReakitCheckbox[aria-checked='mixed']+.eu28k4m3 {
  fill: #4f0599;
}

.cache-18vdqte-StyledReakitCheckbox[aria-checked='true']+.eu28k4m3 .eu28k4m6,
.cache-18vdqte-StyledReakitCheckbox[aria-checked='mixed']+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']+.eu28k4m3,
.cache-18vdqte-StyledReakitCheckbox[aria-invalid='mixed']+.eu28k4m3 {
  fill: #dd3252;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']+.eu28k4m3 .eu28k4m6,
.cache-18vdqte-StyledReakitCheckbox[aria-invalid='mixed']+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
}

.cache-18vdqte-StyledReakitCheckbox:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-18vdqte-StyledReakitCheckbox:focus+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']:focus+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-1m7zzqc-StyledIcon {
  margin-right: 8px;
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-uzcbt1-InnerCheckbox {
  fill: #ffffff;
  stroke: #b2b6c3;
}

<label
    aria-disabled="false"
    class="cache-122v91t-StyledCheckBoxContainer eu28k4m1"
    data-checked="false"
    data-visibility="true"
  >
    <input
      aria-checked="false"
      aria-invalid="false"
      class="cache-18vdqte-StyledReakitCheckbox eu28k4m2"
      name="checkbox-6c756c756c756c756c756c756c756c75"
      type="checkbox"
    />
    <svg
      class="cache-1m7zzqc-StyledIcon eu28k4m3"
      name="checkbox-blank-outline"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <rect
          class="cache-uzcbt1-InnerCheckbox eu28k4m6"
          height="14"
          rx="1"
          stroke-width="2"
          width="14"
          x="5"
          y="5"
        />
        <rect
          class="cache-1nu9t2r-CheckMark eu28k4m5"
          height="8"
          rx="1"
          width="8"
          x="8"
          y="8"
        />
      </g>
    </svg>
    Checkbox Label
  </label>
</DocumentFragment>
`;

exports[`Checkbox renders correctly no child 1`] = `
<DocumentFragment>
  .cache-122v91t-StyledCheckBoxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='true'] .eu28k4m3 .eu28k4m6 {
  stroke: #c4c9d6;
  fill: #f6f6f8;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-18vdqte-StyledReakitCheckbox {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
}

.cache-18vdqte-StyledReakitCheckbox+.eu28k4m3 .eu28k4m5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-18vdqte-StyledReakitCheckbox[aria-checked='true']+svg .eu28k4m5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-18vdqte-StyledReakitCheckbox[aria-checked='true']+.eu28k4m3,
.cache-18vdqte-StyledReakitCheckbox[aria-checked='mixed']+.eu28k4m3 {
  fill: #4f0599;
}

.cache-18vdqte-StyledReakitCheckbox[aria-checked='true']+.eu28k4m3 .eu28k4m6,
.cache-18vdqte-StyledReakitCheckbox[aria-checked='mixed']+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']+.eu28k4m3,
.cache-18vdqte-StyledReakitCheckbox[aria-invalid='mixed']+.eu28k4m3 {
  fill: #dd3252;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']+.eu28k4m3 .eu28k4m6,
.cache-18vdqte-StyledReakitCheckbox[aria-invalid='mixed']+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
}

.cache-18vdqte-StyledReakitCheckbox:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-18vdqte-StyledReakitCheckbox:focus+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']:focus+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-1m7zzqc-StyledIcon {
  margin-right: 8px;
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-uzcbt1-InnerCheckbox {
  fill: #ffffff;
  stroke: #b2b6c3;
}

<label
    aria-disabled="false"
    class="cache-122v91t-StyledCheckBoxContainer eu28k4m1"
    data-checked="false"
  >
    <input
      aria-checked="false"
      aria-invalid="false"
      class="cache-18vdqte-StyledReakitCheckbox eu28k4m2"
      name="checkbox-6c756c756c756c756c756c756c756c75"
      type="checkbox"
    />
    <svg
      class="cache-1m7zzqc-StyledIcon eu28k4m3"
      name="checkbox-blank-outline"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <rect
          class="cache-uzcbt1-InnerCheckbox eu28k4m6"
          height="14"
          rx="1"
          stroke-width="2"
          width="14"
          x="5"
          y="5"
        />
        <rect
          class="cache-1nu9t2r-CheckMark eu28k4m5"
          height="8"
          rx="1"
          width="8"
          x="8"
          y="8"
        />
      </g>
    </svg>
  </label>
</DocumentFragment>
`;

exports[`Checkbox renders correctly with a value 1`] = `
<DocumentFragment>
  .cache-122v91t-StyledCheckBoxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='true'] .eu28k4m3 .eu28k4m6 {
  stroke: #c4c9d6;
  fill: #f6f6f8;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-18vdqte-StyledReakitCheckbox {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
}

.cache-18vdqte-StyledReakitCheckbox+.eu28k4m3 .eu28k4m5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-18vdqte-StyledReakitCheckbox[aria-checked='true']+svg .eu28k4m5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-18vdqte-StyledReakitCheckbox[aria-checked='true']+.eu28k4m3,
.cache-18vdqte-StyledReakitCheckbox[aria-checked='mixed']+.eu28k4m3 {
  fill: #4f0599;
}

.cache-18vdqte-StyledReakitCheckbox[aria-checked='true']+.eu28k4m3 .eu28k4m6,
.cache-18vdqte-StyledReakitCheckbox[aria-checked='mixed']+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']+.eu28k4m3,
.cache-18vdqte-StyledReakitCheckbox[aria-invalid='mixed']+.eu28k4m3 {
  fill: #dd3252;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']+.eu28k4m3 .eu28k4m6,
.cache-18vdqte-StyledReakitCheckbox[aria-invalid='mixed']+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
}

.cache-18vdqte-StyledReakitCheckbox:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-18vdqte-StyledReakitCheckbox:focus+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']:focus+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-1m7zzqc-StyledIcon {
  margin-right: 8px;
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-uzcbt1-InnerCheckbox {
  fill: #ffffff;
  stroke: #b2b6c3;
}

<label
    aria-disabled="false"
    class="cache-122v91t-StyledCheckBoxContainer eu28k4m1"
    data-checked="false"
  >
    <input
      aria-checked="false"
      aria-invalid="false"
      class="cache-18vdqte-StyledReakitCheckbox eu28k4m2"
      name="checkbox-6c756c756c756c756c756c756c756c75"
      type="checkbox"
      value="test"
    />
    <svg
      class="cache-1m7zzqc-StyledIcon eu28k4m3"
      name="checkbox-blank-outline"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <rect
          class="cache-uzcbt1-InnerCheckbox eu28k4m6"
          height="14"
          rx="1"
          stroke-width="2"
          width="14"
          x="5"
          y="5"
        />
        <rect
          class="cache-1nu9t2r-CheckMark eu28k4m5"
          height="8"
          rx="1"
          width="8"
          x="8"
          y="8"
        />
      </g>
    </svg>
    Checkbox Label
  </label>
</DocumentFragment>
`;

exports[`Checkbox renders correctly with an error 1`] = `
<DocumentFragment>
  .cache-122v91t-StyledCheckBoxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='true'] .eu28k4m3 .eu28k4m6 {
  stroke: #c4c9d6;
  fill: #f6f6f8;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-18vdqte-StyledReakitCheckbox {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
}

.cache-18vdqte-StyledReakitCheckbox+.eu28k4m3 .eu28k4m5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-18vdqte-StyledReakitCheckbox[aria-checked='true']+svg .eu28k4m5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-18vdqte-StyledReakitCheckbox[aria-checked='true']+.eu28k4m3,
.cache-18vdqte-StyledReakitCheckbox[aria-checked='mixed']+.eu28k4m3 {
  fill: #4f0599;
}

.cache-18vdqte-StyledReakitCheckbox[aria-checked='true']+.eu28k4m3 .eu28k4m6,
.cache-18vdqte-StyledReakitCheckbox[aria-checked='mixed']+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']+.eu28k4m3,
.cache-18vdqte-StyledReakitCheckbox[aria-invalid='mixed']+.eu28k4m3 {
  fill: #dd3252;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']+.eu28k4m3 .eu28k4m6,
.cache-18vdqte-StyledReakitCheckbox[aria-invalid='mixed']+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
}

.cache-18vdqte-StyledReakitCheckbox:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-18vdqte-StyledReakitCheckbox:focus+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']:focus+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-1m7zzqc-StyledIcon {
  margin-right: 8px;
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-uzcbt1-InnerCheckbox {
  fill: #ffffff;
  stroke: #b2b6c3;
}

<label
    aria-disabled="false"
    class="cache-122v91t-StyledCheckBoxContainer eu28k4m1"
    data-checked="false"
  >
    <input
      aria-checked="false"
      aria-describedby="checkbox-6c756c756c756c756c756c756c756c75-hint"
      aria-invalid="true"
      class="cache-18vdqte-StyledReakitCheckbox eu28k4m2"
      name="checkbox-6c756c756c756c756c756c756c756c75"
      type="checkbox"
    />
    <svg
      class="cache-1m7zzqc-StyledIcon eu28k4m3"
      name="checkbox-blank-outline"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <rect
          class="cache-uzcbt1-InnerCheckbox eu28k4m6"
          height="14"
          rx="1"
          stroke-width="2"
          width="14"
          x="5"
          y="5"
        />
        <rect
          class="cache-1nu9t2r-CheckMark eu28k4m5"
          height="8"
          rx="1"
          width="8"
          x="8"
          y="8"
        />
      </g>
    </svg>
    Checkbox Label
  </label>
  .cache-1p3rjo3-StyledText-PaddedText {
  color: #a6102d;
  font-size: 14px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0 4px;
}

<p
    class="eu28k4m4 cache-1p3rjo3-StyledText-PaddedText e1tg3t120"
  >
    test error
  </p>
</DocumentFragment>
`;

exports[`Checkbox renders correctly with indeterminate state 1`] = `
<DocumentFragment>
  .cache-122v91t-StyledCheckBoxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='true'] .eu28k4m3 .eu28k4m6 {
  stroke: #c4c9d6;
  fill: #f6f6f8;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-18vdqte-StyledReakitCheckbox {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
}

.cache-18vdqte-StyledReakitCheckbox+.eu28k4m3 .eu28k4m5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-18vdqte-StyledReakitCheckbox[aria-checked='true']+svg .eu28k4m5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-18vdqte-StyledReakitCheckbox[aria-checked='true']+.eu28k4m3,
.cache-18vdqte-StyledReakitCheckbox[aria-checked='mixed']+.eu28k4m3 {
  fill: #4f0599;
}

.cache-18vdqte-StyledReakitCheckbox[aria-checked='true']+.eu28k4m3 .eu28k4m6,
.cache-18vdqte-StyledReakitCheckbox[aria-checked='mixed']+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']+.eu28k4m3,
.cache-18vdqte-StyledReakitCheckbox[aria-invalid='mixed']+.eu28k4m3 {
  fill: #dd3252;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']+.eu28k4m3 .eu28k4m6,
.cache-18vdqte-StyledReakitCheckbox[aria-invalid='mixed']+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
}

.cache-18vdqte-StyledReakitCheckbox:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-18vdqte-StyledReakitCheckbox:focus+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']:focus+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-1m7zzqc-StyledIcon {
  margin-right: 8px;
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-uzcbt1-InnerCheckbox {
  fill: #ffffff;
  stroke: #b2b6c3;
}

<label
    aria-disabled="false"
    class="cache-122v91t-StyledCheckBoxContainer eu28k4m1"
    data-checked="indeterminate"
  >
    <input
      aria-checked="mixed"
      aria-invalid="false"
      class="cache-18vdqte-StyledReakitCheckbox eu28k4m2"
      name="checkbox-6c756c756c756c756c756c756c756c75"
      type="checkbox"
    />
    <svg
      class="cache-1m7zzqc-StyledIcon eu28k4m3"
      name="minus-box-outline"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <rect
          class="cache-uzcbt1-InnerCheckbox eu28k4m6"
          height="14"
          rx="1"
          stroke-width="2"
          width="14"
          x="5"
          y="5"
        />
        <rect
          height="2"
          rx="1"
          width="8"
          x="8"
          y="11"
        />
      </g>
    </svg>
    Checkbox Label
  </label>
</DocumentFragment>
`;

exports[`Checkbox renders correctly with progress 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.cache-1tqrbnc-StyledActivityContainer {
  display: inline;
  vertical-align: middle;
  margin-right: 8px;
}

.cache-gqzzce-Loader {
  -webkit-animation: animation-0 0.75s linear infinite;
  animation: animation-0 0.75s linear infinite;
}

.cache-11f05l0-Loader {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<div
    class="cache-1tqrbnc-StyledActivityContainer eu28k4m0"
  >
    <svg
      aria-label="Loading"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      class="cache-gqzzce-Loader"
      role="progressbar"
      style="height: 24px; width: 24px;"
      viewBox="0 0 100 100"
    >
      <circle
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#d4dae7"
        stroke-width="16"
      />
      <circle
        class="cache-11f05l0-Loader"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#4f0599"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
  .cache-122v91t-StyledCheckBoxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='true'] .eu28k4m3 .eu28k4m6 {
  stroke: #c4c9d6;
  fill: #f6f6f8;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-18vdqte-StyledReakitCheckbox {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
}

.cache-18vdqte-StyledReakitCheckbox+.eu28k4m3 .eu28k4m5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-18vdqte-StyledReakitCheckbox[aria-checked='true']+svg .eu28k4m5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-18vdqte-StyledReakitCheckbox[aria-checked='true']+.eu28k4m3,
.cache-18vdqte-StyledReakitCheckbox[aria-checked='mixed']+.eu28k4m3 {
  fill: #4f0599;
}

.cache-18vdqte-StyledReakitCheckbox[aria-checked='true']+.eu28k4m3 .eu28k4m6,
.cache-18vdqte-StyledReakitCheckbox[aria-checked='mixed']+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']+.eu28k4m3,
.cache-18vdqte-StyledReakitCheckbox[aria-invalid='mixed']+.eu28k4m3 {
  fill: #dd3252;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']+.eu28k4m3 .eu28k4m6,
.cache-18vdqte-StyledReakitCheckbox[aria-invalid='mixed']+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
}

.cache-18vdqte-StyledReakitCheckbox:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-18vdqte-StyledReakitCheckbox:focus+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']:focus+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

<label
    aria-disabled="false"
    class="cache-122v91t-StyledCheckBoxContainer eu28k4m1"
    data-checked="false"
  >
    <input
      aria-checked="false"
      aria-invalid="false"
      class="cache-18vdqte-StyledReakitCheckbox eu28k4m2"
      name="checkbox-6c756c756c756c756c756c756c756c75"
      type="checkbox"
    />
    Checkbox Label
  </label>
</DocumentFragment>
`;

exports[`Checkbox renders correctly with progress and no child 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.cache-1x5sj3x-StyledActivityContainer {
  display: inline;
  vertical-align: middle;
  margin-right: 0;
}

.cache-gqzzce-Loader {
  -webkit-animation: animation-0 0.75s linear infinite;
  animation: animation-0 0.75s linear infinite;
}

.cache-11f05l0-Loader {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<div
    class="cache-1x5sj3x-StyledActivityContainer eu28k4m0"
  >
    <svg
      aria-label="Loading"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      class="cache-gqzzce-Loader"
      role="progressbar"
      style="height: 24px; width: 24px;"
      viewBox="0 0 100 100"
    >
      <circle
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#d4dae7"
        stroke-width="16"
      />
      <circle
        class="cache-11f05l0-Loader"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#4f0599"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
  .cache-122v91t-StyledCheckBoxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='true'] .eu28k4m3 .eu28k4m6 {
  stroke: #c4c9d6;
  fill: #f6f6f8;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-18vdqte-StyledReakitCheckbox {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
}

.cache-18vdqte-StyledReakitCheckbox+.eu28k4m3 .eu28k4m5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-18vdqte-StyledReakitCheckbox[aria-checked='true']+svg .eu28k4m5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-18vdqte-StyledReakitCheckbox[aria-checked='true']+.eu28k4m3,
.cache-18vdqte-StyledReakitCheckbox[aria-checked='mixed']+.eu28k4m3 {
  fill: #4f0599;
}

.cache-18vdqte-StyledReakitCheckbox[aria-checked='true']+.eu28k4m3 .eu28k4m6,
.cache-18vdqte-StyledReakitCheckbox[aria-checked='mixed']+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']+.eu28k4m3,
.cache-18vdqte-StyledReakitCheckbox[aria-invalid='mixed']+.eu28k4m3 {
  fill: #dd3252;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']+.eu28k4m3 .eu28k4m6,
.cache-18vdqte-StyledReakitCheckbox[aria-invalid='mixed']+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
}

.cache-18vdqte-StyledReakitCheckbox:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-18vdqte-StyledReakitCheckbox:focus+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']:focus+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

<label
    aria-disabled="false"
    class="cache-122v91t-StyledCheckBoxContainer eu28k4m1"
    data-checked="false"
  >
    <input
      aria-checked="false"
      aria-invalid="false"
      class="cache-18vdqte-StyledReakitCheckbox eu28k4m2"
      name="checkbox-6c756c756c756c756c756c756c756c75"
      type="checkbox"
    />
  </label>
</DocumentFragment>
`;

exports[`Checkbox renders correctly with sizes 1`] = `
<DocumentFragment>
  .cache-122v91t-StyledCheckBoxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='true'] .eu28k4m3 .eu28k4m6 {
  stroke: #c4c9d6;
  fill: #f6f6f8;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-1xeahyq-StyledReakitCheckbox {
  opacity: 0.01;
  width: 37px;
  height: 37px;
  position: absolute;
  cursor: pointer;
}

.cache-1xeahyq-StyledReakitCheckbox+.eu28k4m3 .eu28k4m5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1xeahyq-StyledReakitCheckbox[aria-checked='true']+svg .eu28k4m5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1xeahyq-StyledReakitCheckbox[aria-checked='true']+.eu28k4m3,
.cache-1xeahyq-StyledReakitCheckbox[aria-checked='mixed']+.eu28k4m3 {
  fill: #4f0599;
}

.cache-1xeahyq-StyledReakitCheckbox[aria-checked='true']+.eu28k4m3 .eu28k4m6,
.cache-1xeahyq-StyledReakitCheckbox[aria-checked='mixed']+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
}

.cache-1xeahyq-StyledReakitCheckbox[aria-invalid='true']+.eu28k4m3,
.cache-1xeahyq-StyledReakitCheckbox[aria-invalid='mixed']+.eu28k4m3 {
  fill: #dd3252;
}

.cache-1xeahyq-StyledReakitCheckbox[aria-invalid='true']+.eu28k4m3 .eu28k4m6,
.cache-1xeahyq-StyledReakitCheckbox[aria-invalid='mixed']+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
}

.cache-1xeahyq-StyledReakitCheckbox:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-1xeahyq-StyledReakitCheckbox:focus+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-1xeahyq-StyledReakitCheckbox[aria-invalid='true']:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-1xeahyq-StyledReakitCheckbox[aria-invalid='true']:focus+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-6rbey0-StyledIcon {
  margin-right: 8px;
  border-radius: 4px;
  height: 37px;
  width: 37px;
  min-width: 37px;
  min-height: 37px;
}

.cache-uzcbt1-InnerCheckbox {
  fill: #ffffff;
  stroke: #b2b6c3;
}

<label
    aria-disabled="false"
    class="cache-122v91t-StyledCheckBoxContainer eu28k4m1"
    data-checked="false"
  >
    <input
      aria-checked="false"
      aria-invalid="false"
      class="cache-1xeahyq-StyledReakitCheckbox eu28k4m2"
      name="checkbox-6c756c756c756c756c756c756c756c75"
      type="checkbox"
      value="test"
    />
    <svg
      class="cache-6rbey0-StyledIcon eu28k4m3"
      name="checkbox-blank-outline"
      size="37"
      viewBox="0 0 24 24"
    >
      <g>
        <rect
          class="cache-uzcbt1-InnerCheckbox eu28k4m6"
          height="14"
          rx="1"
          stroke-width="2"
          width="14"
          x="5"
          y="5"
        />
        <rect
          class="cache-1nu9t2r-CheckMark eu28k4m5"
          height="8"
          rx="1"
          width="8"
          x="8"
          y="8"
        />
      </g>
    </svg>
    Checkbox Label
  </label>
  @keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.cache-1tqrbnc-StyledActivityContainer {
  display: inline;
  vertical-align: middle;
  margin-right: 8px;
}

.cache-gqzzce-Loader {
  -webkit-animation: animation-0 0.75s linear infinite;
  animation: animation-0 0.75s linear infinite;
}

.cache-11f05l0-Loader {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<div
    class="cache-1tqrbnc-StyledActivityContainer eu28k4m0"
  >
    <svg
      aria-label="Loading"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      class="cache-gqzzce-Loader"
      role="progressbar"
      style="height: 37px; width: 37px;"
      viewBox="0 0 100 100"
    >
      <circle
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#d4dae7"
        stroke-width="16"
      />
      <circle
        class="cache-11f05l0-Loader"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#4f0599"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
  .cache-122v91t-StyledCheckBoxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-122v91t-StyledCheckBoxContainer[aria-disabled='true'] .eu28k4m3 .eu28k4m6 {
  stroke: #c4c9d6;
  fill: #f6f6f8;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-122v91t-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-1xeahyq-StyledReakitCheckbox {
  opacity: 0.01;
  width: 37px;
  height: 37px;
  position: absolute;
  cursor: pointer;
}

.cache-1xeahyq-StyledReakitCheckbox+.eu28k4m3 .eu28k4m5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1xeahyq-StyledReakitCheckbox[aria-checked='true']+svg .eu28k4m5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1xeahyq-StyledReakitCheckbox[aria-checked='true']+.eu28k4m3,
.cache-1xeahyq-StyledReakitCheckbox[aria-checked='mixed']+.eu28k4m3 {
  fill: #4f0599;
}

.cache-1xeahyq-StyledReakitCheckbox[aria-checked='true']+.eu28k4m3 .eu28k4m6,
.cache-1xeahyq-StyledReakitCheckbox[aria-checked='mixed']+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
}

.cache-1xeahyq-StyledReakitCheckbox[aria-invalid='true']+.eu28k4m3,
.cache-1xeahyq-StyledReakitCheckbox[aria-invalid='mixed']+.eu28k4m3 {
  fill: #dd3252;
}

.cache-1xeahyq-StyledReakitCheckbox[aria-invalid='true']+.eu28k4m3 .eu28k4m6,
.cache-1xeahyq-StyledReakitCheckbox[aria-invalid='mixed']+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
}

.cache-1xeahyq-StyledReakitCheckbox:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-1xeahyq-StyledReakitCheckbox:focus+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-1xeahyq-StyledReakitCheckbox[aria-invalid='true']:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-1xeahyq-StyledReakitCheckbox[aria-invalid='true']:focus+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

<label
    aria-disabled="false"
    class="cache-122v91t-StyledCheckBoxContainer eu28k4m1"
    data-checked="false"
  >
    <input
      aria-checked="false"
      aria-invalid="false"
      class="cache-1xeahyq-StyledReakitCheckbox eu28k4m2"
      name="checkbox-6c756c756c756c756c756c756c756c75"
      type="checkbox"
      value="test"
    />
    Checkbox Label
  </label>
</DocumentFragment>
`;
